@@ -1,3 +1,9 @@
+2011-02-18  Pierre Muller  <muller@ics.u-strasbg.fr>
+
+	* c-valprint.c (c_val_print): Add embedded_offset to address
+	for arrays of unspecified length.
+	* p-valprint.c (pascal_val_print): Likewise.
+
 2011-02-11  Pedro Alves  <pedro@codesourcery.com>
 
 	* infrun.c (proceed): Move switching out and in of tfind mode from
